# CryptoSentimentAnalysis

./: .gitattributes  .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
data/: bitcoin_prices.csv
src/: analyze.py  fetch_prices.py  fetch_tweets.py
