[project]
name = "cryptosentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pycoingecko>=3.2.0",
    "seaborn>=0.13.2",
    "snscrape>=0.7.0.20230622",
    "streamlit>=1.40.2",
]
